--- a/damotosArtsAndCrafts/index.html
+++ b/damotosArtsAndCrafts/index.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <div id="heading">
-      <h1>Damoto's Arts and Crafts</h1>
+      <h1 class="bold">Damoto's Arts and Crafts</h1>
     </div>
     <div id="brushes">
-      <h3 class="title">Brushes</h3>
+      <h3 class="title bold">Brushes</h3>
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/hacksaw.jpeg">
       <h4>Hacksaw Brushes</h4>
       <p>Made of the highest quality oak, Hacksaw brushes are known for their
         weight and ability to hold paint in large amounts. Available in
-        different sizes. <span class="price">Starting at $3.00 / brush.</span>
+        different sizes. <span class="price bold">Starting at $3.00 / brush.</span>
       </p>
     </div>
     <div id="frames">
@@ -24,7 +24,7 @@
       <h4>Art Frames (assorted)</h4>
       <p>Assorted frames made of different material, including MDF, birchwood,
         and PDE. Select frames can be sanded and painted according to your
-        needs. <span class="price">Starting at $2.00 / frame.</span></p>
+        needs. <span class="price bold">Starting at $2.00 / frame.</span></p>
     </div>
     <div id="paint">
       <h3 class="title">Paint</h3>
@@ -33,7 +33,7 @@
       <p>Imported paint from Finland. Over 256 colors available in-store,
         varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to
         canvas, increasing the finish and longevity of any artwork. <span
-        class="price">Starting at $5.00 / tube.</span></p>
+        class="price bold">Starting at $5.00 / tube.</span></p>
     </div>
   </body>
 </html>
